--- a/app/index.html
+++ b/app/index.html
@@ -40,22 +40,22 @@
                         <div class="col col-6 col-md-3">
                             <i class="fas fa-male fa-2x"></i>
                             <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">About</p>
-                            <p class="h1">64</p>
+                            <p class="h1">7.0 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
                             <i class="fas fa-archive fa-2x"></i>
                             <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Portfolio</p>
-                            <p class="h1">13</p>
+                            <p class="h1">9.5 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
                             <i class="fas fa-certificate fa-2x"></i>
                             <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Knowledge</p>
-                            <p class="h1">27</p>
+                            <p class="h1">8.0 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
                             <i class="far fa-heart fa-2x"></i>
                             <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Interests</p>
-                            <p class="h1">50</p>
+                            <p class="h1">8.5 <span class="h6">/ 10</span></p>
                         </div>
                     </div>
                 </section>
