--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col">
                 <section class="content">
-                    Header
+                    <h1>erikb.</h1>
                 </section>
             </div>
         </div>
@@ -28,34 +28,31 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <section class="content">
-                    <h1>Hej!</h1>
-                    <p>Text!</p>
-    
+                <section class="content">    
                     <!-- <button class="btn btn-dark" onclick="ClickAction()">KLICKA</button> -->
                 </section>
 
                 <section class="content blocks">
                     <div class="row text-center">
                         <div class="col col-6 col-md-3">
-                            <i class="fas fa-male fa-2x"></i>
-                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">About</p>
-                            <p class="h1">7.0 <span class="h6">/ 10</span></p>
+                            <i class="fas fa-male fa-2x color8"></i>
+                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase text-spaced">About</p>
+                            <p class="h1 font-heading">7.0 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
-                            <i class="fas fa-archive fa-2x"></i>
-                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Portfolio</p>
-                            <p class="h1">9.5 <span class="h6">/ 10</span></p>
+                            <i class="fas fa-archive fa-2x color7"></i>
+                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase text-spaced">Portfolio</p>
+                            <p class="h1 font-heading">9.5 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
-                            <i class="fas fa-certificate fa-2x"></i>
-                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Knowledge</p>
-                            <p class="h1">8.0 <span class="h6">/ 10</span></p>
+                            <i class="fas fa-certificate fa-2x color6"></i>
+                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase text-spaced">Knowledge</p>
+                            <p class="h1 font-heading">8.0 <span class="h6">/ 10</span></p>
                         </div>
                         <div class="col col-6 col-md-3">
-                            <i class="far fa-heart fa-2x"></i>
-                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase">Interests</p>
-                            <p class="h1">8.5 <span class="h6">/ 10</span></p>
+                            <i class="far fa-heart fa-2x color5"></i>
+                            <p class="h6 py-3 my-3 border-top border-bottom text-uppercase text-spaced">Interests</p>
+                            <p class="h1 font-heading">8.5 <span class="h6">/ 10</span></p>
                         </div>
                     </div>
                 </section>
