Minor markup changes

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
                         </button>
                         <div class="container">
                             <span class="color1">
-                                <i class="fab fa-black-tie fa-3x color1"></i>
+                                <i class="fab fa-vuejs fa-3x color1"></i>
                                 <span class="h2" v-cloak>{{ headerText }}</span>
                             </span>
                         </div>
